# homework1_module6

coursework_module4/models/: api_classes.py  saver_classes.py  vacancy_classes.py
coursework_module4/src/: main.py  utils.py
coursework_module5/: README.md  pyproject.toml
coursework_module5/models/: api_class.py  db_class.py  vacancy_class.py
coursework_module5/src/: db_script.py  main.py  utils.py
homework1_module6/: index.html  main.py
